Fix cursive font rendering on mobile

--- a/html/assets/css/theme.css
+++ b/html/assets/css/theme.css
@@ -1,8 +1,13 @@
 @font-face {
     font-family: 'Comfortaa';
-    src: url(../fonts/Comfortaa-Regular.ttf) format('ttf') format('truetype'),
-         url(../fonts/Comfortaa-Light.ttf) format('ttf') format('truetype'),
-         url(../fonts/Comfortaa-Bold.ttf) format('ttf') format('truetype');
+    src: url(../fonts/Comfortaa-Regular.ttf) format('truetype'),
+         url(../fonts/Comfortaa-Light.ttf) format('truetype'),
+         url(../fonts/Comfortaa-SemiBold.ttf) format('truetype')
+         url(../fonts/Comfortaa-Bold.ttf) format('truetype'),
+         url(../fonts/Comfortaa-Regular.woff) format('woff'),
+         url(../fonts/Comfortaa-Light.woff) format('woff'),
+         url(../fonts/Comfortaa-SemiBold.woff) format('woff'),
+         url(../fonts/Comfortaa-Bold.woff) format('woff');
 }
 
 *,
